@@ -3,6 +3,11 @@
 	* doc/Makefile.am, Makefile.am, configure.in: include doc/
 	  subdirectory in distribution tarballs
 
+	* src/widgets/icon.c: final tweaks for getting icon highlights
+	  right on buttons (temporary hack, hopefully)
+
+	* src/splivarot.cpp: compilation fix
+
 2003-12-12  bulia byak <bulia@dr.com>
 
 	* src/svg/svg-path.c src/desktop.h src/libnr/gen_nr_config.c src/libnr/nr-object.c
